Made a few improvements to interactivity, altered scrollbar and added the image of the issues on magazine/issues page. Essentially completing the main pages for desktops

--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -3,6 +3,7 @@
     height: 91vh;
     width: 95%;
     flex-direction: column;
+    overflow-y:auto;
 }
 
 .mag-title{
@@ -12,6 +13,17 @@
 }
 
 .mag-title:hover {
+    color: #2F52E0 !important;
+    transition: color 0.1s ease
+}
+
+.mem-title {
+    text-align: center;
+    text-decoration: none;
+    color: black !important;
+}
+
+.mem-title:hover {
     color: #2F52E0 !important;
     transition: color 0.1s ease
 }
@@ -36,6 +48,9 @@
 }
 
 .issues {
+    display:flex;
+    flex-direction:column;
+    align-items: center;
     flex-grow: 1;
 }
 
@@ -48,6 +63,12 @@
 .issue-link:hover {
     color: #2F52E0;
     transition: color 0.1s ease
+}
+
+.issue-crd {
+    width: 90% !important;
+    margin-bottom: 20px;
+    border:0 !important;
 }
 
 .yellow {
@@ -89,7 +110,7 @@
 }
 
 .accordion-item:target .answer {
-    max-height: 90vh;
+    max-height: 44vh;
     overflow-y: auto;
     padding: 15pt;
     border-top: 1px solid black;
@@ -184,8 +205,8 @@ body{
 
 #mainbox {
     flex-direction:column;
-    min-height: 94vh;
-    height:auto;
+    height: 94.5vh;
+    overflow:hidden;
 }
 
 @media only screen and (max-width: 470px) {
